test/error/MethodBaseNotFound.fu
public class Base
{
}

public class Test : Base
{
	public static bool Run()
	{
		return base.Foo(); //ERROR: 'Foo' not found
	}
}
